# turtle_bot_for_real

./: .gitignore  :w  CMakeLists.txt  compile_commands.json  flash.sh  turtle_bot.ioc
.cache/clangd/index/: cmsis_compiler.h.62E37333EE8089B6.idx  cmsis_gcc.h.4BEBF33EE2CABB23.idx  cmsis_version.h.9A637E7AE64B0221.idx  core_cm4.h.B279AAB9F062B673.idx  dma.c.172D7375BE966AC9.idx  dma.h.E20B359826DDC95A.idx  driver.cpp.1DBDB150CEC1A278.idx  driver.hpp.8FA28912AA0354B2.idx  gpio.c.EA1BBBCA3F114A9B.idx  gpio.h.C8C6FB0C30441536.idx  main.c.6133BB591FC9E96F.idx  main.h.132A2B242608C9BA.idx  mpu_armv7.h.89495FF1244E6AC0.idx  robot.cpp.7FDE05A3AA3F0F6C.idx  robot.h.4C61D67A696C5995.idx  startup_stm32f407xx.s.9BFF43EA092CF615.idx  stm32_hal_legacy.h.833F8FFF58EE2F39.idx  stm32f407xx.h.1CD24C43F382692C.idx  stm32f4xx.h.849FC93D5EE9BA41.idx  stm32f4xx_hal.c.DFAB5EEDD3714F07.idx  stm32f4xx_hal.h.8ED8D0C056A41055.idx  stm32f4xx_hal_conf.h.057B9173A844EFF5.idx  stm32f4xx_hal_cortex.c.35BB8EF7CCA7F3BD.idx  stm32f4xx_hal_cortex.h.3665FC6A53FDD7A4.idx  stm32f4xx_hal_def.h.484FD9D4776C3D8A.idx  stm32f4xx_hal_dma.c.66E01F6722145040.idx  stm32f4xx_hal_dma.h.8E07B0EBF7CD8027.idx  stm32f4xx_hal_dma_ex.c.167EACCA68BF4D54.idx  stm32f4xx_hal_dma_ex.h.FD2FA61624D4F10E.idx  stm32f4xx_hal_exti.c.B0BCCC4304E14F0C.idx  stm32f4xx_hal_exti.h.F2623B70D635193C.idx  stm32f4xx_hal_flash.c.EE093ACDDD33D36A.idx  stm32f4xx_hal_flash.h.7BFB18F0521357B4.idx  stm32f4xx_hal_flash_ex.c.8B0811F35A5C71C8.idx  stm32f4xx_hal_flash_ex.h.0932EF163A8CC155.idx  stm32f4xx_hal_flash_ramfunc.c.CB04E2F2F7005E75.idx  stm32f4xx_hal_flash_ramfunc.h.DBEB6D6532DECBBA.idx  stm32f4xx_hal_gpio.c.C828167DFF47D98E.idx  stm32f4xx_hal_gpio.h.9854960E9D5A2066.idx  stm32f4xx_hal_gpio_ex.h.95354A08E718D660.idx  (+48 more)
Core/Inc/: .robot.h.~undo-tree~  PID.h  PID.hpp  api_functions.hpp  crc.h  crc8.hpp  driver.hpp  encoder.hpp  joystick.h  joystick.hpp  kinematics.hpp  main.h  robot.h  robot.hpp  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
Core/Src/: .main.c.~undo-tree~  .printf_config.c.~undo-tree~  .robot.cpp.~undo-tree~  PID.cpp  crc.c  crc8.cpp  dma.c  driver.cpp  encoder.cpp  gpio.c  joystick.c  joystick.cpp  kinematics.cpp  main.c  printf_config.c  robot.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: .CMakeLists.txt.~undo-tree~  CMakeLists.txt
